2007-07-30  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/AssemblyReferencePanel.cs:
	Changed assembly filters to match mixed-case extensions
	e.g. Dll, eXe

2007-08-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs, MonoDevelop.Ide.mdp,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am: Implemented the New File dialog
	  using Stetic.
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.CodeTemplates.CodeTemplatePanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.ExternalToolPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs: Updated.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/AddInsOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/BuildPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/SelectStylePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/TasksOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/CodeGenerationPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs, Base.glade,
	  MonoDevelop.Ide.Commands/ViewCommands.cs,
	  MonoDevelop.Ide.Gui.Dialogs/SelectReferenceDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/AssemblyReferencePanel.cs,
	  MonoDevelop.Ide.Gui.Dialogs/TipOfTheDay.cs,